--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "config": "^3.2.5",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "joi": "^14.3.1",
